src/styles/pages/details.scss
.detailspage-container {

  & .hexagram-card {
    width: 100%;
    position: absolute;
    top: 0; left: 0;
  }

  & .interpretation {
    margin: 5% 5%;
    margin-top: calc( 120px + 5%);

    & q {
      position: relative;
      font-size: 1.8em;
      text-align: left;
      padding-left: 1rem;
      max-width: 100%;
      display: block;
      quotes: "\201C" "\201D";

      white-space: pre-wrap;
      font-style: italic;

      word-wrap: break-word;
      word-break: break-word;
      hyphens: manual;
    }

    & q:before {
      font-size: 3rem;
      position: absolute;
      top: -1rem;
      left: -1rem;
    }
    & q:after {
      font-size: 3rem;
      position: absolute;
      bottom: -1rem;
      right: -.5rem;
    }


    & .highlight {
      display: flex;
      flex-direction: column-reverse;
      justify-content: space-around;
      align-items: center;

      & .tarot {
        flex: 1 1 40%;
        transform: scale3d(0.8,0.8,1.0);

        & img {
          max-width: 100%;
          object-fit: cover;
        }
      }

      & .oracle {
        width: 100%;
        margin: 0px auto;
      }
    }

    & p {
      font-size: 1.15em;
      hyphens: manual;
    }

    & hr {
      border: 0;
      border-bottom: 1px solid #dadada;
    }

    /* subQuotes */
    & hr + .subQuote,
    & .line > .subQuote {
      margin: 1em 1em;
      margin-left: auto;
      margin-right: auto;
      min-width: 80%;
      width: auto;
      max-width: 90%;
    }

    & h3 {
      font-size: 2.0em;
      text-transform: uppercase;
      margin-bottom: 0;
    }
  }
}

